--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,9 @@
   width: 100%;
 }
 
+p {
+}
+
 img {
   display: inline-block;
   vertical-align: middle;
@@ -20,8 +23,8 @@ img {
   transition-property: transform;
   display: block;
   margin: auto;
-  width: 100%;
-  height: 90%;
+  width: 20%;
+  height: 20%;
   padding: 10px;
   margin-bottom: 10px;
 }
@@ -49,25 +52,27 @@ img {
   background-color: rgba(14, 24, 14, 0.507);
 }
 
-.footer-copyright {
-  text-align: center;
+.footer-copyright .page-footer {
+  padding: 0px;
 }
 
-ul#horizontal-list {
-  min-width: 696px;
-  list-style: none;
-  padding-top: 20px;
-}
 ul#horizontal-list li {
   display: inline;
-  font-size: 50px;
+  font-size: 20px;
 }
 
 #ico {
-  height: 100%;
-  padding-left: 50px;
+  padding-left: 10px;
 }
 
 ul {
+}
+
+a {
+  color: black;
+  margin-right: 15px;
+}
+
+p {
   text-align: center;
 }
